Three js with ascii effect

--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/fiber": "^8.12.0",
+    "@types/three": "^0.150.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "rvfc-polyfill": "^1.0.6"
+    "rvfc-polyfill": "^1.0.6",
+    "three": "^0.151.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
